--- a/dsbathWeb/src/main/resources/static/css/common.css
+++ b/dsbathWeb/src/main/resources/static/css/common.css
@@ -39,7 +39,11 @@ html, body {
 	font-size		: 12px;
 }
 .main-left-bottom {
-	
+	width			: 135px;
+	margin			: 0 auto;
+}
+.main-left-bottom a {
+	text-decoration : none !important;
 }
 .main-image-01 {
 	width			: 100%;
