--- a/dsbathWeb/src/main/resources/static/css/common.css
+++ b/dsbathWeb/src/main/resources/static/css/common.css
@@ -1,24 +1,42 @@
+
+.text-right {
+	text-align 		: right;
+}
+.text-center {
+	text-align		: center;
+}
+.over-text {
+	overflow		: hidden; 
+	text-overflow	: ellipsis; 
+	white-space		: nowrap;
+}
 /* 
 	남색 : #18283d
 	노랑 : #f2cc3e
  */
-html, body {
-	height			: 100%;
-	overflow		: hidden;
-}
-.container-custom {
-	max-width		: 1600px;
-	margin			: 0 auto;
+.layout-body {
+	padding-left	: 190px; 
+	padding-right	: 290px;
+	padding-top		: 90px;
+	height			: 1500px;
 }
 .left-container {
 	width			: 200px;
 }
 .left-menu {
 	background 		: #f2cc3e;
+	width			: 190px;
+	height			: 100%;
+	position		: fixed;
+	z-index			: 111;
 }
 .head-area {
 	background		: #ffeca3;
 	height			: 90px;
+	width			: 100%;
+	z-index			: 1;
+	opacity			: 0.7;
+	position		: fixed;
 }
 .left-logo {
     width			: 135px;
@@ -46,7 +64,12 @@ html, body {
 	text-decoration : none !important;
 }
 .main-image-01 {
-	width			: 100%;
+	background-image 	: url('/images/main-01.png');
+	width				: 100%;
+	height				: 70%;
+    background-size		: cover;
+    background-position	: right bottom;
+    background-repeat	: no-repeat;
 }
 .no-padding {
 	padding 		: 0 !important;
@@ -57,43 +80,150 @@ html, body {
 }
 
 .right-login-form {
-	padding-top		: 30px;
+	padding-top		: 40px;
 	text-align		: center;
 	height			: 180px;
 }
 .right-login-form input[type="text"] {
 	margin-bottom	: 8px;
 }
+
+#mainConstructInstance .instance-text {
+	margin-left		: 10px;
+    margin-top		: 5px;
+    margin-bottom	: 5px;
+}
+
+/* right menu */
+.right-form-full {
+	margin 			: 0 auto;
+	width			: 210px;
+	position		: absolute;
+	right			: 45px;
+	padding-top		: 90px;
+}
+.login-id-text, .login-password-text {
+	position		: relative;
+    margin-top		: -26px;
+    border			: 0;
+    display			: block;
+    margin-left		: 45px;
+}
 .right-login-btn {
     width			: 100%;
+    border-radius	: 11px;
+    margin-top		: 5px;
     background		: #f2cc3e;
     color			: #ffffff;
 }
 .right-login-check {
 	font-size 		: 12px;
 	margin-top		: 8px;
+	width			: 100%;
+    margin			: 0 auto;
 }
 .right-login-check .left-check {
 	float			: left;
 }
 .right-login-check .right-check {
 	float			: right;
+	margin-top		: 5px;
 }
 .right-construct-instance {
-	border			: 1px solid #e4e0dc;
+	border			: 1px solid #f2cc3e;
 	border-radius	: 6px;	
-	height			: 535px;
+	height			: 550px;
+	margin-top		: 15px;
 }
 .right-construct-instance .instance-title {
-	font-size		: 21px;
+	font-size		: 16px;
 	margin-left		: 12px;
-    margin-top		: 10px;
+    margin-top		: 17px;
     margin-right	: 12px;
     padding-bottom	: 7px;
-    border-bottom	: 1px solid #e4e0dc;
+    border-bottom	: 1px solid #f2cc3e;
 }
-#mainConstructInstance .instance-text {
-	margin-left		: 10px;
-    margin-top		: 5px;
-    margin-bottom	: 5px;
+.right-tel {
+	background		: #f2cc3e;
+	padding			: 15px;
+	border-radius	: 10px;
+    margin-top		: 20px;
+    text-align		: center;
+}
+.right-tel .text-01 {
+	font-weight 	: bold;
+	font-size		: 27px;
+	margin-bottom	: -8px;
+}
+.right-tel .text-02 {
+	font-weight		: bold;
+	font-size		: 24px;
+}
+.right-tel .text-03 {
+	font-weight		: bold;
+	font-size		: 16px;
+}
+
+/* body notice START */
+.notice-row {
+	padding			: 15px;
+}
+.notice-area {
+	width			: 50%;
+	float			: left;
+	padding			: 10px;
+}
+.notice-area .notice-padding {
+	border			: 1px solid #f2cc3e;
+	border-radius	: 7px;
+}
+.notice-area .notice-header {
+	height			: 45px;
+	border-bottom	: 1px solid #f2cc3e;
+	margin-left		: 15px;
+	margin-right	: 15px;
+	
+}
+.notice-area .notice-header .notice-title {
+	font-weight		: bold;
+	font-size		: 17px;
+	padding-top		: 15px;
+	float			: left;
+}
+.notice-area .notice-header .notice-more {
+	float			: right;
+	padding-top 	: 16px;
+	color			: #4e4e4e;
+	cursor			: pointer;
+}
+.notice-area .notice-header .notice-more:hover {
+	font-weight 	: bold;
+}
+.notice-area .notice-body {
+	height			: 220px;
+}
+.main-notice-table {
+	width			: 100%;
+	table-layout	: fixed;
+	color			: #828282;
+	font-size		: 12px;
+	margin-top		: 5px;
+}
+.main-notice-table tbody td {
+	padding 		: 5px;
+	padding-right	: 15px;
+	padding-left	: 15px;
+}
+.main-notice-table tbody tr {
+	cursor			: pointer;
+}
+.main-notice-table tbody tr.add-data:hover {
+	font-weight		: bold;
+	background		: #f3f3f3;
+}
+/* body notice END */
+
+.no-data {
+	padding-top		: 100px;
+	font-size		: 14px;
 }
