--- a/dsbathWeb/src/main/resources/static/css/common.css
+++ b/dsbathWeb/src/main/resources/static/css/common.css
@@ -76,7 +76,7 @@ a {
 .main-image-01 {
 	background-image 	: url('/images/main-01.png');
 	width				: 100%;
-	height				: 70%;
+	height				: 750px;
     background-size		: cover;
     background-position	: right bottom;
     background-repeat	: no-repeat;
